@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                                 April 29, 2006
+                               September 9, 2006
 
    --------------------------------------------------------------------------
 
@@ -310,6 +310,11 @@ Windows Users
              situations where the program is only being used for fun, or in a
              test environment.
 
+     startblank=yes
+             This causes Tux Paint to display a blank canvas when it first
+             starts up, rather than loading the last image that was being
+             edited.
+
      lang=LANGUAGE
 
              Run Tux Paint in one of the supported languages. Possible choice
@@ -474,6 +479,7 @@ Windows Users
        --1280x1204
        --1400x1050
        --1600x1200
+       --startblank
        --nosound
        --noquit
        --noprint
@@ -504,6 +510,7 @@ Windows Users
 
        --windowed
        --640x480
+       --startlast
        --sound
        --quit
        --print
