@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>April 29, 2006</p>
+<p>September 9, 2006</p>
 </center>
 
 <hr size=2 noshade>
@@ -382,6 +382,12 @@ New Breed Software</p>
     (and therefore disables the on-screen "Save" button).
     It can be used in situations where the program is only being used for
     fun, or in a test environment.
+  </dd>
+
+  <dt><code><b>startblank=yes</b></code</dt>
+  <dd>
+    This causes Tux&nbsp;Paint to display a blank canvas when it first
+    starts up, rather than loading the last image that was being edited.
   </dd>
   
   <dt><code><b>lang=<i>LANGUAGE</i></b></code></dt>
@@ -752,6 +758,7 @@ New Breed Software</p>
     --1280x1204<br>
     --1400x1050<br>
     --1600x1200<br>
+    --startblank<br>
     --nosound<br>
     --noquit<br>
     --noprint<br>
@@ -785,6 +792,7 @@ New Breed Software</p>
     <dt><code><b>
     --windowed<br>
     --640x480<br>
+    --startlast<br>
     --sound<br>
     --quit<br>
     --print<br>
