@@ -9,7 +9,7 @@ http://www.newbreedsoftware.com/tuxpaint/
 $Id$
 
 
-2006.September.6 (0.9.16)
+2006.September.9 (0.9.16)
 
   * Interface improvements:
     -----------------------
@@ -42,6 +42,9 @@ $Id$
 
       Discovered (or assumed) window size and directory settings are shown
       when tuxpaint-import is first run (even with no arguments).
+
+    * "startblank" option added, to cause Tux Paint to always start with
+      a blank canvas (rather than loading the most-recently-edited image).
 
     * In windowed mode, Tux Paint tries to open its window in the center
       of the screen (if supported by the OS or window manager).
